src/objects/ints__EfxReport_Employment__c.object
<CustomObject>
    <fields>
        <fullName>ints__DateEmployed__c</fullName>
        <label>DateEmployed</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__Date__c</fullName>
        <description>This date corresponds to the verification date.</description>
        <label>Date</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__EfxReport__c</fullName>
        <label>EfxReport</label>
        <referenceTo>ints__EfxReport__c</referenceTo>
        <relationshipLabel>EfxReport Employments</relationshipLabel>
        <relationshipName>EfxReport_Employments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__Employer__c</fullName>
        <label>Employer</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__Occupation__c</fullName>
        <label>Occupation</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__SalaryAmount__c</fullName>
        <label>SalaryAmount</label>
        <length>20</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__city__c</fullName>
        <label>city</label>
        <length>50</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__code__c</fullName>
        <label>code</label>
        <length>5</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__description__c</fullName>
        <label>description</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>EfxReport Employment</label>
    <nameField>
        <displayFormat>EFX_EMP-{000000000}</displayFormat>
        <label>EfxReport Employment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EfxReport Employments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>